manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakabas
  labels:
    name: sakabas
