manifests/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: web
        image: "us-central1-docker.pkg.dev/hello-world-352201/nginx-gcs-proxy/nginx-gcs-proxy:1.0.3"
        ports:
        - name: http-port
          containerPort: 80
