manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-port
