manifests/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: sakaba-link
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "website-lb-ip"
    networking.gke.io/managed-certificates: "web-cert"
spec:
  rules:
    - host: "sakaba.link"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
